php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38693 curl_multi_add_handle set curl handle to null
Submitted: 2006-09-02 19:26 UTC Modified: 2006-09-04 16:31 UTC
From: waax at yahoo dot com Assigned:
Status: Closed Package: cURL related
PHP Version: 5CVS-2006-09-02 (CVS) OS: Windows XP SP2
Private report: No CVE-ID: None
 [2006-09-02 19:26 UTC] waax at yahoo dot com
Description:
------------
The scripts create a curl multi handle and then add a curl handle.

I expected to be able to use the curl handle after adding it to the multi handle.

Instead, the curl handle becomes NULL.

I think it's related to the bug #38637 (http://bugs.php.net/bug.php?id=38637&edit=2) because it stopped working after i took the latest cvs.

PHP Version => 5.2.0RC4-dev
CURL Information => libcurl/7.14.0 OpenSSL/0.9.8a zlib/1.2.3


Reproduce code:
---------------
<?php
$mh = curl_multi_init();
$ch = curl_init("http://yahoo.com");
curl_multi_add_handle($mh, $ch);

var_dump($ch);
?>

Expected result:
----------------
resource(5) of type (curl)

Actual result:
--------------
NULL

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-09-04 16:31 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC