Fixed bug #38693 (curl_multi_add_handle() set curl handle to null).